--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -4,11 +4,11 @@
     <app-header></app-header>
 </div>
 <div>
-    <app-presentacion></app-presentacion>
-    <app-quienessomos></app-quienessomos>
-    <app-razonsocial></app-razonsocial>
-    <app-diagnostico></app-diagnostico>
-    <app-contactanos></app-contactanos>
-    <app-encuentranos></app-encuentranos>
-</div>
+    <app-presentacion ></app-presentacion>
+    <app-quienessomos id="quienessomos"></app-quienessomos>
+    <app-razonsocial id="razonsocial"></app-razonsocial>
+    <app-diagnostico id="diagnostico"></app-diagnostico>
+    <app-contactanos id="contactanos"></app-contactanos>
+    <app-encuentranos ></app-encuentranos>
+  </div>
 </body>
